--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<h1>
-  {{title}}
-</h1>
+<h1>Bliss Recruitment App - Sérgio Fernandes</h1>
+<app-look-for-server-health></app-look-for-server-health>
