Add loading and list screens. Preparing details screen.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<h1>Bliss Recruitment App - Sérgio Fernandes</h1>
-<app-look-for-server-health></app-look-for-server-health>
+<div>
+  <router-outlet></router-outlet>
+</div>
