--- a/src/app/look-for-server-health/look-for-server-health.component.html
+++ b/src/app/look-for-server-health/look-for-server-health.component.html
@@ -1,1 +1,4 @@
-<p>Checking for server health.</p>
+<div>
+  <p>{{loadingMessage}}</p>
+  <button [ngClass]="{dontDisplayThis: dontDisplayThis()}" (click)="checkForServer()">Try again!</button>
+</div>
