--- a/src/app/details-screen/details-screen.component.html
+++ b/src/app/details-screen/details-screen.component.html
@@ -17,6 +17,7 @@
   </div>
   <div>
     <a routerLink="/listScreen">Go back to list</a>
-    <button>Share</button>
+    <a routerLink="/shareScreen">Share</a>
+    <app-share-screen></app-share-screen>
   </div>
 </div>
