--- a/src/app/monitorize-connection/monitorize-connection.component.html
+++ b/src/app/monitorize-connection/monitorize-connection.component.html
@@ -1,4 +1,8 @@
-<div [ngClass]="{hide: hideThis()}">
-  <p>You are offline</p>
-  <p>Please check your connection</p>
+<div class="container" [ngClass]="{hide: hideThis()}">
+  <div class="row">
+    <div class="col-xs-12">
+      <p>You are offline</p>
+      <p>Please check your connection</p>
+    </div>
+  </div>
 </div>
