--- a/src/app/share-screen/share-screen.component.css
+++ b/src/app/share-screen/share-screen.component.css
@@ -1,13 +1,27 @@
+.shareButton {
+  position: fixed !important;
+  top: 4px;
+  right: 4px;
+}
 .mainDiv {
-  position: absolute;
+  position: fixed;
   top: 0;
-  z-index: 8;
+  left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255,255,255,.9);
-  left: 0;
+  background-color: rgba(0, 0, 0, .8);
 }
 
+.mainDiv .row {
+  margin-top: 80px;
+}
+.container button {
+  width: 100%;
+}
 .hideBox {
   display: none;
+}
+.message {
+  color: #fff;
+  margin-top: 12px;
 }
