--- a/src/app/share-screen/share-screen.component.html
+++ b/src/app/share-screen/share-screen.component.html
@@ -1,7 +1,27 @@
-<button (click)="showIt()">Share</button>
+<div  class="shareButton" >
+  <button type="button" class="btn btn-success" aria-label="Left Align" (click)="showIt()">
+    <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+    Share this
+  </button>
+</div>
+
 <div class="mainDiv" [ngClass]="{hideBox: hideBox()}">
-  <input type="text" [(ngModel)]="contactEmail">
-  <button (click)="sharePage()">Send</button>
-  <button (click)="closeShare()">Close</button>
-  <p>{{message}}</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="col-xs-8">
+          <input type="email" class="form-control" placeholder="Email" [(ngModel)]="contactEmail">
+        </div>
+        <div class="col-xs-2">
+          <button class="btn btn-primary" (click)="sharePage()">Send</button>
+        </div>
+        <div class="col-xs-2">
+          <button class="btn btn-danger" (click)="closeShare()">Close</button>
+        </div>
+        <div class="col-xs-12">
+          <p class="message">{{message}}</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
